frontend/src/assets/main.css
@import "./colors.css";

@font-face {
  font-family: FunnelDisplay;
  src: url("./fonts/FunnelDisplay.ttf");
}

#app {
  max-width: 1280px;
  margin: 0 auto;
  padding: 20px;
  font-weight: normal;
}

body {
  min-height: 100vh;
  color: var(--cp-black);
  background: linear-gradient(45deg, var(--cp-gradient1), var(--cp-gradient2));
  font-family:
    Inter,
    -apple-system,
    BlinkMacSystemFont,
    "Segoe UI",
    Roboto,
    Oxygen,
    Ubuntu,
    Cantarell,
    "Fira Sans",
    "Droid Sans",
    "Helvetica Neue",
    sans-serif;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

/* Text */

h1 {
  font-family: FunnelDisplay;
  font-size: 48px;
  margin: 0;
  font-weight: 700;
  color: var(--color-text-white);
}

h2 {
  font-family: FunnelDisplay;
  font-size: 40px;
  margin: 0;
  font-weight: 600;
  color: var(--color-text-dark);
}

h3 {
  font-family: FunnelDisplay;
  font-size: 36px;
  margin: 0;
  font-weight: 600;
  color: var(--color-text-dark);
}

h4 {
  font-family: FunnelDisplay;
  font-size: 24px;
  margin: 0;
  font-weight: 600;
  color: var(--color-text-dark);
}

p {
  font-family: FunnelDisplay;
  font-size: 14px;
  color: var(--color-text-dark);
  font-weight: 300;
}

.p-large {
  font-size: 16px;
  font-weight: 500;
}

.light {
  color: var(--color-text-light);
}

.white {
  color: var(--color-text-white);
}

.no-margin {
  margin: 0;
}

.heading-margin {
  margin-bottom: 20px;
}

.form-heading-margin {
  margin-bottom: 5px;
}

a {
  text-decoration: none;
  color: var(--cp-bright-green);
  transition: 0.4s;
  padding: 3px;
}

/* Containers */

.container {
  max-width: 1440px;
  margin: 0 auto;
  padding: 15px 40px;
  background-color: var(--cp-white);
  border-radius: 15px;
  min-height: calc(100vh - 80px);
  position: relative;
}

.content-container {
  padding: 20px 20px;
}

/* @media (hover: hover) {
  a:hover {
    background-color: hsla(160, 100%, 37%, 0.2);
  }
}

@media (min-width: 1024px) {
  body {
    display: flex;
    place-items: center;
  }

  #app {
    display: grid;
    grid-template-columns: 1fr 1fr;
    padding: 0 2rem;
  }
} */

